--- a/publication/publications.bib
+++ b/publication/publications.bib
@@ -1,64 +1,69 @@
 %% This BibTeX bibliography file was created using BibDesk.
-%% https://bibdesk.sourceforge.io/
+%% http://bibdesk.sourceforge.net/
 
-%% Created for Jessica Dafflon at 2020-07-18 21:12:42 +0100 
+%% Created for Jessica Dafflon at 2021-04-25 16:24:30 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@article{Baecker-2021Brain,
+	author = {Lea Baecker and Jessica Dafflon and Pedro F. Costa and Rafael Garcia-Dias and Sandra Vieira and Cristina Scarpazza and Vince D. Calhoun and Jo{\~{a}}o R. Sato and Andrea Mechelli and Walter H. L. Pinaya},
+	date-added = {2021-04-25 16:16:16 -0400},
+	date-modified = {2021-04-25 16:16:23 -0400},
+	doi = {10.1002/hbm.25368},
+	journal = {Human Brain Mapping},
+	month = {mar},
+	publisher = {Wiley},
+	title = {Brain age prediction: A comparison between machine learning models using region- and voxel-based morphometric data},
+	url = {https://doi.org/10.1002%2Fhbm.25368},
+	year = 2021,
+	Bdsk-Url-1 = {https://doi.org/10.1002%2Fhbm.25368},
+	Bdsk-Url-2 = {https://doi.org/10.1002/hbm.25368}}
+
+@article{Dafflon-2020Neuroimaging:,
+	author = {Dafflon, Jessica and Da Costa,Pedro F. and V{\'a}{\v s}a,Franti{\v s}ek and Monti,RicardoPio and Bzdok,Danilo and Hellyer,Peter J. and Turkheimer,Federico and Smallwood,Jonathan and Jones,Emily and Leech,Robert},
+	date-added = {2021-04-25 16:13:44 -0400},
+	date-modified = {2021-04-25 16:24:21 -0400},
+	doi = {10.1101/2020.10.29.359778},
+	journal = {bioRxiv},
+	keywords = {Functional connectivity, multiverse, optimization},
+	title = {Neuroimaging: into the Multiverse},
+	year = {2020}}
+
 @article{Turkheimer-2019Conflicting,
-	Abstract = {The concept of "emergence" has become commonplace in the modelling of complex systems, both natural and man-made; a functional property" emerges" from a system when it cannot be readily explained by the properties of the system's sub-units. A bewildering array of adaptive and sophisticated behaviours can be observed from large ensembles of elementary agents such as ant colonies, bird flocks or by the interactions of elementary material units such as molecules or weather elements. Ultimately, emergence has been adopted as the ontological support of a number of attempts to model brain function. This manuscript aims to clarify the ontology of emergence and delve into its many facets, particularly into its "strong" and "weak" versions that underpin two different approaches to the modelling of behaviour. The first group of models is here represented by the "free energy" principle of brain function and the "integrated information theory" of consciousness. The second group is instead represented by computational models such as oscillatory networks that use mathematical scalable representations to generate emergent behaviours and are then able to bridge neurobiology with higher mental functions. Drawing on the epistemological literature, we observe that due to their loose mechanistic links with the underlying biology, models based on strong forms of emergence are at risk of metaphysical implausibility. This, in practical terms, translates into the over determination that occurs when the proposed model becomes only one of a large set of possible explanations for the observable phenomena. On the other hand, computational models that start from biologically plausible elementary units, hence are weakly emergent, are not limited by ontological faults and, if scalable and able to realistically simulate the hierarchies of brain output, represent a powerful vehicle for future neuroscientific research programmes.},
-	Author = {Turkheimer, Federico E and Hellyer, Peter and Kehagia, Angie A and Expert, Paul and Lord, Louis-David and Vohryzek, Jakub and De Faria Dafflon, Jessica and Brammer, Mick and Leech, Robert},
-	Date-Added = {2020-07-18 21:12:22 +0100},
-	Date-Modified = {2020-07-18 21:12:22 +0100},
-	Doi = {10.1016/j.neubiorev.2019.01.023},
-	Journal = {Neurosci Biobehav Rev},
-	Journal-Full = {Neuroscience and biobehavioral reviews},
-	Keywords = {Bayesian inference; Brain; Computational models; Emergence; Free energy principle; Integrated information theory; Multi-scale; Oscillators; Strong emergence; Weak emergence},
-	Mesh = {Brain; Computer Simulation; Consciousness; Humans; Models, Neurological; Nerve Net; Nervous System Physiological Phenomena},
-	Month = {04},
-	Pages = {3-10},
-	Pmc = {PMC6581535},
-	Pmid = {30684520},
-	Pst = {ppublish},
-	Title = {Conflicting emergences. Weak vs. strong emergence for the modelling of brain function},
-	Volume = {99},
-	Year = {2019},
+	abstract = {The concept of "emergence" has become commonplace in the modelling of complex systems, both natural and man-made; a functional property" emerges" from a system when it cannot be readily explained by the properties of the system's sub-units. A bewildering array of adaptive and sophisticated behaviours can be observed from large ensembles of elementary agents such as ant colonies, bird flocks or by the interactions of elementary material units such as molecules or weather elements. Ultimately, emergence has been adopted as the ontological support of a number of attempts to model brain function. This manuscript aims to clarify the ontology of emergence and delve into its many facets, particularly into its "strong" and "weak" versions that underpin two different approaches to the modelling of behaviour. The first group of models is here represented by the "free energy" principle of brain function and the "integrated information theory" of consciousness. The second group is instead represented by computational models such as oscillatory networks that use mathematical scalable representations to generate emergent behaviours and are then able to bridge neurobiology with higher mental functions. Drawing on the epistemological literature, we observe that due to their loose mechanistic links with the underlying biology, models based on strong forms of emergence are at risk of metaphysical implausibility. This, in practical terms, translates into the over determination that occurs when the proposed model becomes only one of a large set of possible explanations for the observable phenomena. On the other hand, computational models that start from biologically plausible elementary units, hence are weakly emergent, are not limited by ontological faults and, if scalable and able to realistically simulate the hierarchies of brain output, represent a powerful vehicle for future neuroscientific research programmes.},
+	author = {Turkheimer, Federico E and Hellyer, Peter and Kehagia, Angie A and Expert, Paul and Lord, Louis-David and Vohryzek, Jakub and De Faria Dafflon, Jessica and Brammer, Mick and Leech, Robert},
+	date-added = {2020-07-18 21:12:22 +0100},
+	date-modified = {2020-07-18 21:12:22 +0100},
+	doi = {10.1016/j.neubiorev.2019.01.023},
+	journal = {Neurosci Biobehav Rev},
+	journal-full = {Neuroscience and biobehavioral reviews},
+	keywords = {Bayesian inference; Brain; Computational models; Emergence; Free energy principle; Integrated information theory; Multi-scale; Oscillators; Strong emergence; Weak emergence},
+	mesh = {Brain; Computer Simulation; Consciousness; Humans; Models, Neurological; Nerve Net; Nervous System Physiological Phenomena},
+	month = {04},
+	pages = {3-10},
+	pmc = {PMC6581535},
+	pmid = {30684520},
+	pst = {ppublish},
+	title = {Conflicting emergences. Weak vs. strong emergence for the modelling of brain function},
+	volume = {99},
+	year = {2019},
 	Bdsk-Url-1 = {https://doi.org/10.1016/j.neubiorev.2019.01.023}}
 
-@article{Savulich-2019Acute,
-	Abstract = {Acute anxiety impacts cognitive performance. Inhalation of air enriched with carbon dioxide (CO2) in healthy humans provides a novel experimental model of generalised anxiety, but has not previously been used to assess cognition. We used inhalation of 7.5% CO2 to induce acute anxiety and autonomic arousal in healthy volunteers during neuropsychological tasks of cognitive flexibility, emotional processing and spatial working memory in a single-blind, placebo-controlled, randomized, crossover, within-subjects study. In Experiment 1 (n = 44), participants made significantly more extra-dimensional shift errors on the Cambridge Neuropsychological Test Automated Battery (CANTAB) Intra-Extra Dimensional Set Shift task under CO2 inhalation compared with 'normal' air. Participants also had slower latencies when responding to positive words and made significantly more omission errors for negative words on the CANTAB Affective Go/No-go task. In Experiment 2 (n = 28), participants made significantly more total errors and had poorer heuristic search strategy on the CANTAB Spatial Working Memory task. In both experiments, CO2 inhalation significantly increased negative affect; state anxiety and fear; symptoms of panic; and systolic blood pressure/heart rate. Overall, CO2 inhalation produced robust anxiogenic effects and impaired fronto-executive functions of cognitive flexibility and working memory. Effects on emotional processing suggested a mood-congruent slowing in processing speed in the absence of a negative attentional bias. State-dependent effects of anxiety on cognitive-emotional interactions in the prefrontal cortex warrant further investigation.},
-	Author = {Savulich, George and Hezemans, Frank H and van Ghesel Grothe, Sophia and Dafflon, Jessica and Schulten, Norah and Br{\"u}hl, Annette B and Sahakian, Barbara J and Robbins, Trevor W},
-	Date-Added = {2020-07-18 21:12:02 +0100},
-	Date-Modified = {2020-07-18 21:12:02 +0100},
-	Doi = {10.1038/s41398-019-0634-z},
-	Journal = {Transl Psychiatry},
-	Journal-Full = {Translational psychiatry},
-	Month = {11},
-	Number = {1},
-	Pages = {296},
-	Pmc = {PMC6851177},
-	Pmid = {31719527},
-	Pst = {epublish},
-	Title = {Acute anxiety and autonomic arousal induced by CO2 inhalation impairs prefrontal executive functions in healthy humans},
-	Volume = {9},
-	Year = {2019},
-	Bdsk-Url-1 = {https://doi.org/10.1038/s41398-019-0634-z}}
-
 @article{Dafflon-2020An,
-	Abstract = {The use of machine learning (ML) algorithms has significantly increased in neuroscience. However, from the vast extent of possible ML algorithms, which one is the optimal model to predict the target variable? What are the hyperparameters for such a model? Given the plethora of possible answers to these questions, in the last years, automated ML (autoML) has been gaining attention. Here, we apply an autoML library called Tree-based Pipeline Optimisation Tool (TPOT) which uses a tree-based representation of ML pipelines and conducts a genetic programming-based approach to find the model and its hyperparameters that more closely predicts the subject's true age. To explore autoML and evaluate its efficacy within neuroimaging data sets, we chose a problem that has been the focus of previous extensive study: brain age prediction. Without any prior knowledge, TPOT was able to scan through the model space and create pipelines that outperformed the state-of-the-art accuracy for Freesurfer-based models using only thickness and volume information for anatomical structure. In particular, we compared the performance of TPOT (mean absolute error [MAE]: 4.612 $\pm$ .124 years) and a relevance vector regression (MAE 5.474 $\pm$ .140 years). TPOT also suggested interesting combinations of models that do not match the current most used models for brain prediction but generalise well to unseen data. AutoML showed promising results as a data-driven approach to find optimal models for neuroimaging applications.},
-	Author = {Dafflon, Jessica and Pinaya, Walter H L and Turkheimer, Federico and Cole, James H and Leech, Robert and Harris, Mathew A and Cox, Simon R and Whalley, Heather C and McIntosh, Andrew M and Hellyer, Peter J},
-	Date-Added = {2020-07-18 21:11:48 +0100},
-	Date-Modified = {2020-07-18 21:11:48 +0100},
-	Doi = {10.1002/hbm.25028},
-	Journal = {Hum Brain Mapp},
-	Journal-Full = {Human brain mapping},
-	Keywords = {age prediction; automated machine learning; cortical features; neuroimaging; predictive modelling; structural imaging},
-	Month = {May},
-	Pmid = {32415917},
-	Pst = {aheadofprint},
-	Title = {An automated machine learning approach to predict brain age from cortical anatomical measures},
-	Year = {2020},
+	abstract = {The use of machine learning (ML) algorithms has significantly increased in neuroscience. However, from the vast extent of possible ML algorithms, which one is the optimal model to predict the target variable? What are the hyperparameters for such a model? Given the plethora of possible answers to these questions, in the last years, automated ML (autoML) has been gaining attention. Here, we apply an autoML library called Tree-based Pipeline Optimisation Tool (TPOT) which uses a tree-based representation of ML pipelines and conducts a genetic programming-based approach to find the model and its hyperparameters that more closely predicts the subject's true age. To explore autoML and evaluate its efficacy within neuroimaging data sets, we chose a problem that has been the focus of previous extensive study: brain age prediction. Without any prior knowledge, TPOT was able to scan through the model space and create pipelines that outperformed the state-of-the-art accuracy for Freesurfer-based models using only thickness and volume information for anatomical structure. In particular, we compared the performance of TPOT (mean absolute error [MAE]: 4.612 $\pm$ .124 years) and a relevance vector regression (MAE 5.474 $\pm$ .140 years). TPOT also suggested interesting combinations of models that do not match the current most used models for brain prediction but generalise well to unseen data. AutoML showed promising results as a data-driven approach to find optimal models for neuroimaging applications.},
+	author = {Dafflon, Jessica and Pinaya, Walter H L and Turkheimer, Federico and Cole, James H and Leech, Robert and Harris, Mathew A and Cox, Simon R and Whalley, Heather C and McIntosh, Andrew M and Hellyer, Peter J},
+	date-added = {2020-07-18 21:11:48 +0100},
+	date-modified = {2020-07-18 21:11:48 +0100},
+	doi = {10.1002/hbm.25028},
+	journal = {Hum Brain Mapp},
+	journal-full = {Human brain mapping},
+	keywords = {age prediction; automated machine learning; cortical features; neuroimaging; predictive modelling; structural imaging},
+	month = {May},
+	pmid = {32415917},
+	pst = {aheadofprint},
+	title = {An automated machine learning approach to predict brain age from cortical anatomical measures},
+	year = {2020},
 	Bdsk-Url-1 = {https://doi.org/10.1002/hbm.25028}}
