--- a/publication/publications.bib
+++ b/publication/publications.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for JessicaD at 2022-07-22 23:06:30 -0400 
+%% Created for JessicaD at 2023-05-19 18:01:57 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Da-Costa-2022Transformer-based,
+	author = {Da Costa, Pedro F and Dafflon, Jessica and Mendes, Sergio Leonardo and Sato, Jo{\~a}o Ricardo and Cardoso, M Jorge and Leech, Robert and Jones, Emily JH and Pinaya, Walter HL},
+	date-added = {2023-05-19 18:01:41 -0400},
+	date-modified = {2023-05-19 18:01:53 -0400},
+	journal = {arXiv preprint arXiv:2212.04984},
+	title = {Transformer-based normative modelling for anomaly detection of early schizophrenia},
+	year = {2022}}
+
+@inproceedings{Pinaya-2022Brain,
+	author = {Pinaya, Walter HL and Tudosiu, Petru-Daniel and Dafflon, Jessica and Da Costa, Pedro F and Fernandez, Virginia and Nachev, Parashkev and Ourselin, Sebastien and Cardoso, M Jorge},
+	booktitle = {Deep Generative Models: Second MICCAI Workshop, DGM4MICCAI 2022, Held in Conjunction with MICCAI 2022, Singapore, September 22, 2022, Proceedings},
+	date-added = {2023-05-19 18:00:25 -0400},
+	date-modified = {2023-05-19 18:01:56 -0400},
+	organization = {Springer},
+	pages = {117--126},
+	title = {Brain imaging generation with latent diffusion models},
+	year = {2022}}
 
 @article{Dafflon-2022A,
 	author = {Jessica Dafflon and Pedro F. Da Costa and Franti{\v{s}}ek V{\'{a}}{\v{s}}a and Ricardo Pio Monti and Danilo Bzdok and Peter J. Hellyer and Federico Turkheimer and Jonathan Smallwood and Emily Jones and Robert Leech},
